manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"frontend","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":8080}],"selector":{"app":"frontend"},"type":"ClusterIP"}}
  creationTimestamp: "2020-02-26T13:13:51Z"
  name: frontend
  namespace: default
  resourceVersion: "137329"
  selfLink: /api/v1/namespaces/default/services/frontend
  uid: a217c868-54ac-463a-9df0-6bf0f5c128aa
spec:
  clusterIP: 10.0.25.76
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
