manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: captureorder
spec:   
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: captureorder
